appId: de.dhbwloe.loerrach.CodeCompanion
tags:
  - smoke
  - offline
---
- launchApp:
    clearState: true
- tapOn:
    id: welcome-get-started-button
- assertVisible:
    id: language-select-option-javascript
- tapOn:
    id: language-select-option-javascript
- assertVisible:
    id: language-overview-confirm-button
- tapOn:
    id: language-overview-confirm-button
- assertVisible:
    id: learn-topic-variables
- tapOn: Practice
- assertVisible:
    id: practice-mode-mixed
- tapOn: Progress
- assertVisible: Your Progress
- tapOn: Learn
- assertVisible:
    id: learn-topic-variables
