appId: de.dhbwloe.loerrach.CodeCompanion
tags:
  - smoke
  - offline
---
- launchApp:
    clearState: true
- tapOn:
    id: welcome-get-started-button
- assertVisible:
    id: language-select-option-javascript
- tapOn:
    id: language-select-option-javascript
- assertVisible:
    id: language-overview-confirm-button
- tapOn:
    id: language-overview-confirm-button
- assertVisible:
    id: open-settings-button
- tapOn:
    id: open-settings-button
- tapOn:
    id: settings-current-focus-info-button
- assertVisible:
    id: language-overview-close-button
- tapOn:
    id: language-overview-close-button
- assertVisible:
    id: settings-display-name-input
- tapOn:
    id: settings-change-technology-button
- tapOn:
    id: language-select-option-python
- assertVisible:
    id: language-overview-hero
- back
- assertVisible:
    id: language-select-option-javascript
- back
- assertVisible:
    id: settings-display-name-input
