appId: de.dhbwloe.loerrach.CodeCompanion
tags:
  - smoke
  - offline
---
- launchApp:
    clearState: true
- tapOn:
    id: welcome-get-started-button
- assertVisible:
    id: language-select-option-javascript
- tapOn:
    id: language-select-option-javascript
- assertVisible:
    id: language-overview-confirm-button
- tapOn:
    id: language-overview-confirm-button
- assertVisible:
    id: learn-topic-variables
- tapOn:
    id: learn-topic-variables
- tapOn:
    id: topic-start-quiz-button
- assertVisible:
    id: quiz-cancel-button
- tapOn:
    id: quiz-cancel-button
- assertVisible:
    id: topic-start-quiz-button
